# plutus-escrow-contract

./: .directory  README.md
escrow/: 1  cabal.project  cabal.project.freeze  example.cabal  shell.nix
escrow/app/: Main.hs
escrow/src/: Escrow-bkp.hs  Escrow.hs  Lib.hs
escrow/test/: EscrowTests.hs  Spec.hs
