cabal-version: 1.12

name:           example
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/example#readme>
homepage:       https://github.com/githubuser/example#readme
bug-reports:    https://github.com/githubuser/example/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/example

library
  exposed-modules:
      Escrow
  other-modules:
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , language-plutus-core
    , plutus-wallet-api
    , plutus-tx
    , containers
  default-language: Haskell2010

test-suite example-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , plutus-wallet-api
    , plutus-tx
    , containers
    , tasty
    , tasty-hunit
    , plutus-emulator
    , example
  default-language: Haskell2010
