cabal-version: 2.0

name:           example
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/example#readme>
homepage:       https://github.com/githubuser/example#readme
bug-reports:    https://github.com/githubuser/example/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/example

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
  exposed-modules:
      Escrow
  other-modules:
  hs-source-dirs:
      src
  default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
  ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
        plutus-contract -any,
        iots-export -any
  build-depends:
        base -any,
        aeson -any,
        bytestring -any,
        containers -any,
        iots-export -any,
        mtl -any,
        playground-common -any,
        plutus-tx -any,
        plutus-playground-lib -any,
        plutus-wallet-api -any,
        plutus-emulator -any,
        template-haskell -any,
        lens -any,
        text -any,
        prettyprinter -any
--  build-depends:
--      base >=4.7 && <5
--    , language-plutus-core
--    , plutus-wallet-api
--    , plutus-tx
--    , containers
--    , plutus-contract
  default-language: Haskell2010

  if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt Language.PlutusTx.Plugin:defer-errors

test-suite example-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      EscrowTests
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , plutus-wallet-api
    , plutus-tx
    , containers
    , tasty
    , tasty-hunit
    , plutus-emulator
    , example
  default-language: Haskell2010
